commit na branch new-branch

--- a/g1009_branches.html
+++ b/g1009_branches.html
@@ -17,5 +17,14 @@
 <textarea name="" readonly id="" cols="90" rows="1">
     git branch new-branch
 </textarea>
+<p>Verifique se foi criado novo branch:</p>
+<textarea name="" readonly id="" cols="90" rows="1">
+        git branch 
+    </textarea>
+    <p>Mude para o novo branch.</p>
+    <textarea name="" readonly id="" cols="90" rows="1">
+            git checkout new-branch
+        </textarea>
+
 </body>
 </html>
